--- a/index00.html
+++ b/index00.html
@@ -278,7 +278,7 @@
                         Nous apportons nos expertises et notre expérience afin de répondre à l’exigence de Prévention des Risques Psycho-sociaux, en adaptant les préconisations - du Ministère de la Réforme de l’Etat, de la Décentralisation et de la Fonction Publique - à la stratégie et au contexte de chaque collectivité́ ou de chaque établissement public.
                      </div>
                      <div class="dividewhite3"></div>
-                     <a role="button" href="stratetudes/index05.html" class="btn btn-default btn-gr">En savoir plus</a>
+                     <a role="button" href="https://arrabatur.github.io/stratetudes/index05.html" class="btn btn-default btn-gr">En savoir plus</a>
                   </div>
                </div>
             </div>
@@ -304,7 +304,7 @@
                         Statétudes propose un dispositif réactif, simple et accessible pour réaliser vos enquêtes d’opinion et d’écoute citoyenne, grâce à sa solution o-scope : une solution intégrée permettant à toutes les collectivités d’accéder aux études d’opinion en maitrisant les coûts.
                      </div>
                      <div class="dividewhite3"></div>
-                     <a role="button" href="stratetudes/index06.html" class="btn btn-default btn-gr">En savoir plus</a>
+                     <a role="button" href="https://arrabatur.github.io/stratetudes/index06.html" class="btn btn-default btn-gr">En savoir plus</a>
                   </div>
                </div>
             </div>
